--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<dependency>
 	      	<groupId>com.heroku.sdk</groupId>
 	      	<artifactId>heroku-deploy</artifactId>
-	      	<version>0.5.7-SNAPSHOT</version>
+	      	<version>0.5.7</version>
 	    </dependency>
 		
 		<!-- HEROKU -->
